/*
 * $Id: ChangeLog,v 1.6442 2009/05/04 11:44:22 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-05-04 21:39 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * contrib\rdd_ads\ads1.c
    ! fixed, xharbour API uses HB_IS_DATETIME instead of HB_IS_TIMESTAMP.

2009-05-04 18:30 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
  * source/common/hbstr.c
    ! minor optimization on string left-trimming

  * source/compiler/genc.c
    ! fix inconsistent function protopyte declaration
      NOTE: still has a bug to fix on an abnormal use of "HB_FUNC_STATIC(X)",
            with quotation marks, but IMO this is a rare and an unusual usage,
            but yet, to be fixed. IOW, under normal usage, static functions under
            pragma begindump/enddump should now work OK.


2009-05-04 10:25 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * contrib\rdd_ads\ads1.c
    * changed FAILURE by HB_FAILURE, SUCCESS by HB_SUCCESS
    * changed support of datetime (TIMESTAMP) fields from string items to datetime items.
    * changes support of varlength fields adding subtypes ADS_VARBINARY_FOX, ADS_VARCHAR_FOX, ADS_VARCHAR
      (synced with harbour as possible)
  * source\rdd\dbf1.c
  * source\rdd\dbfcdx\dbfcdx1.c
    * white spaces.

2009-05-01 22:29 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
  * include\hbapi.h
  * source\rdd\bmdbfcdx\bmdbfcdx1.c
  * source\rdd\dbfcdx\dbfcdx1.c
  * source\rdd\dbfnsx\dbfnsx1.c
  * source\rtl\transfrm.c
  * source\rtl\valtype.c
  * source\vm\hvm.c
  * source\vm\itemapi.c
    * Removed HB_IT_TIMESTAMP, and changed (.time != 0) by HB_IIT_TIMEFLAG how will be added to
      HB_IT_DATE when time has value. It's little faster, and more clear.
    ! fixed VM to work with this changes.

2009-05-01 0618 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>